--- a/project/style.css
+++ b/project/style.css
@@ -6,7 +6,7 @@
 
 :root {
   --primary:black;
-  --primary-dark:rgb(14, 90, 14);
+  --primary-dark:gold;
   --secondary: #0f172a;
   --accent: #06b6d4;
   --text-primary: #1e293b;
@@ -597,7 +597,7 @@ section {
 
 .project-status {
   position: absolute;
-  top: 1rem;
+  top: 1rem; 
   right: 1rem;
   padding: 0.375rem 0.75rem;
   background: var(--accent);
@@ -699,6 +699,9 @@ section {
   align-items: start;
 }
 
+.project-tags #tag1:hover{
+ border:2px solid black;
+}
 .contact-intro {
   font-size: 1.1rem;
   line-height: 1.8;
@@ -720,7 +723,11 @@ section {
   border-radius: 10px;
   transition: all 0.3s ease;
 }
+.project-tags .tag:hover{
+  border: 0.5px solid black ;
+  scroll-behavior: smooth;
 
+}
 .contact-item:hover {
   transform: translateX(4px);
   box-shadow: var(--shadow-sm);
